@startuml VisiCalcDiagram

class VisiCalc 
class VisiCalcUI 
class Viewport 
class HojaDeCalculo 
class Celda 

VisiCalc --> VisiCalcUI: Instancia
VisiCalcUI --> Viewport: Usa
VisiCalcUI --> HojaDeCalculo: Usa
Viewport --> HojaDeCalculo: Usa
Viewport --> Celda: Usa
HojaDeCalculo --> Celda: Tiene

@enduml